# dms-admin

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/dms_admin_api/: __init__.py  auth.py  config.py  main.py  schemas.py
backend/src/dms_admin_api/dms/: __init__.py  models.py  parsers.py  runner.py  service.py
backend/src/dms_admin_api/routers/: accounts.py  aliases.py  auth.py  health.py  quotas.py  relay.py  system.py
backend/tests/: test_auth.py  test_compose_command.py  test_dms_service.py  test_health.py  test_parsers.py  test_root_compose_files.py  test_routes.py
backend/tests/integration/: .env  compose.yaml  compose_command.py  test_dms_container.py
backend/tests/integration/docker-data/dms/config/: dovecot-quotas.cf  postfix-accounts.cf  postfix-virtual.cf
backend/tests/integration/docker-data/dms/logs/: mail.err  mail.info  mail.warn
backend/tests/integration/docker-data/dms/mail-state/lib-dovecot/: instances
backend/tests/integration/docker-data/dms/mail-state/spool-postfix/pid/: master.pid
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css
openspec/changes/split-compose-modes-and-image-scripts/: design.md  tasks.md
openspec/specs/admin-access/: spec.md
openspec/specs/admin-ui-delivery/: spec.md
scripts/: build-images.sh  image-common.sh  push-images.sh  validate-multiarch.sh
(+34 files in other folders)
