[project]
name = "dms-admin-api"
version = "0.1.0"
description = "FastAPI backend for Docker Mail Server admin"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0,<3.0.0",
    "fastapi>=0.116.0,<1.0.0",
    "httpx>=0.28.0,<0.29.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "uvicorn>=0.35.0,<0.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "pytest-cov>=6.2.0,<7.0.0",
    "respx>=0.22.0,<0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dms_admin_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: local Docker Mail Server integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
